--- a/.github/workflows/pileline.yml
+++ b/.github/workflows/pileline.yml
@@ -19,3 +19,5 @@ jobs:
         run: npm install
       - name: Check for remaining ESLint errors
         run: npm run eslint
+      - name: Run test
+        run: npm run test
